--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title> örnek2 </title>
-		 <link rel="stylesheet" href="C:\Users\muhammed\Desktop\kls\frontend_Montor\örnk2\css\normalize.css"> 
-    <link rel="stylesheet" href="C:\Users\muhammed\Desktop\kls\frontend_Montor\örnk2\css\index_css.css">
+		 <link rel="stylesheet" href="\css\normalize.css"> 
+    <link rel="stylesheet" href="\css\index_css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
